--- a/src/scss/pages/_project-home.scss
+++ b/src/scss/pages/_project-home.scss
@@ -10,6 +10,9 @@
 
         &--head {
             & > .row {
+                gap: 0;
+                justify-content: initial;
+
                 &.par {
                     flex-direction: row-reverse;
                 }
@@ -19,6 +22,10 @@
                 display: flex !important;
                 width: auto !important;
                 padding: 0 !important;
+            }
+
+            .project__info {
+                padding-right: 0;
             }
         }
 
@@ -59,7 +66,14 @@
 
                 picture {
                     height: calc(624px + 350 * ((100vw - 1920px) / 1280));
+                    border-radius: 6px;
+                    overflow: hidden;
                 }
+            }
+
+            picture {
+                border-radius: 6px;
+                overflow: hidden;
             }
         }
 
@@ -109,6 +123,10 @@
                     .project__item .row {
                         flex-direction: row-reverse;
                     }
+
+                    .col-8 {
+                        padding-left: 0;
+                    }
                 }
             }
 
@@ -116,16 +134,23 @@
                 width: 100% !important;
                 order: 2;
                 position: relative;
+                gap: 0;
 
                 .row {
                     padding-bottom: 0;
+                    gap: 0 !important;
+                }
+
+                .col-8 {
+                    padding-right: 0;
                 }
 
                 picture {
                     height: calc(
                         300px + 620 * (100vw - 360px) / 768
                     ) !important;
-                    padding-left: 15px;
+                    padding-left: 0;
+                    width: 100%;
                 }
 
                 &__place {
