--- a/src/pug/project-detail.pug
+++ b/src/pug/project-detail.pug
@@ -81,52 +81,52 @@ block content
                         .swiper.slider-detail
                             .swiper-wrapper
                                 .swiper-slide
-                                    a(href="img/layout5.jpg", data-lightbox="galeria-desktop")
+                                    a#image4(href="img/layout5.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout5.jpg' alt)
 
-                                    a(href="img/layout2.jpg", data-lightbox="galeria-desktop")
+                                    a#image2(href="img/layout2.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout2.jpg' alt)
 
-                                    a(href="img/layout3.jpg", data-lightbox="galeria-desktop")
+                                    a#image5(href="img/layout3.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout3.jpg' alt)
 
-                                    a(href="img/layout.jpg", data-lightbox="galeria-desktop")
+                                    a#image1(href="img/layout.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout.jpg' alt)
 
-                                    a(href="img/layout4.jpg", data-lightbox="galeria-desktop")
+                                    a#image3(href="img/layout4.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout4.jpg' alt)
 
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a#image6(href="img/layout6.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout6.jpg' alt)
 
                                 .swiper-slide
-                                    a(href="img/layout5.jpg", data-lightbox="galeria-desktop")
+                                    a#image10(href="img/layout5.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout5.jpg' alt)
 
-                                    a(href="img/layout2.jpg", data-lightbox="galeria-desktop")
+                                    a#image8(href="img/layout2.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout2.jpg' alt)
 
-                                    a(href="img/layout3.jpg", data-lightbox="galeria-desktop")
+                                    a#image11(href="img/layout3.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout3.jpg' alt)
 
-                                    a(href="img/layout.jpg", data-lightbox="galeria-desktop")
+                                    a#image9(href="img/layout.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout.jpg' alt)
 
-                                    a(href="img/layout4.jpg", data-lightbox="galeria-desktop")
+                                    a#image7(href="img/layout4.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout4.jpg' alt)
 
-                                    a(href="img/layout6.jpg", data-lightbox="galeria-desktop")
+                                    a#image12(href="img/layout6.jpg", data-lightbox="galeria-desktop")
                                         picture
                                             img.img-fluid(src='img/layout6.jpg' alt)
 
@@ -146,16 +146,11 @@ block content
                     - var n = 0;
                     while n < 3
                         - ++n
-                        .col-lg-4.col-12
+                        .col-lg-4.col-12.project-simple
                             .projects-grid--wrap
                                 .projects-home__card__images__img(titulo='Worl Trade Center')
                                     img.img-fluid(src='img/images1.jpg' alt)
 
-                                .projects-home__card__images__img
-                                    img.img-fluid(src='img/images1.jpg' alt)
-
-                                .projects-home__card__images__img
-                                    img.img-fluid(src='img/images1.jpg' alt)
 
                             h3.projects-home__card__title 
                                 | Typology 
@@ -167,12 +162,6 @@ block content
                                 .projects-home__card__hover__projects__links
                                     a(href="project-home.html")
                                         h5.projects-home__card__hover__title Worl Trade Center
-
-                                    a(href="project-home.html")
-                                        h5.projects-home__card__hover__title Transparencias
-
-                                    a(href="project-home.html") 
-                                        h5.projects-home__card__hover__title Agricultura
 
                                 h4 Typology 
                                     .btnHoverGridInt
