--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -13,6 +13,27 @@ block content
             h1.text-center PROJECTS
             .container-fluid
                 .row
+
+                    .col-lg-4.col-12.project-simple
+                        .projects-grid--wrap
+                            .projects-home__card__images__img(titulo='Worl Trade Center')
+                                img.img-fluid(src='img/images1.jpg' alt)
+
+
+                        h3.projects-home__card__title 
+                            | Typology 
+                            .btnHoverGrid
+
+                        a(href="project-home.html") 
+                            .projects-home__card__hover__projects
+                                h5.title-categoria PROJECTS
+
+                                .projects-home__card__hover__projects__links
+                                    h5.projects-home__card__hover__title Worl Trade Center
+
+                                h4 Typology 
+                                    .btnHoverGridInt
+
                     - var n = 0;
                     while n < 8
                         - ++n
@@ -31,6 +52,7 @@ block content
                                 | Typology 
                                 .btnHoverGrid
 
+                            a.linkCard
                             .projects-home__card__hover__projects
                                 h5.title-categoria PROJECTS
 
