--- a/src/pug/search-result.pug
+++ b/src/pug/search-result.pug
@@ -17,36 +17,25 @@ block content
                     - var n = 0;
                     while n < 3
                         - ++n
-                        .col-lg-4.col-12
+                        .col-lg-4.col-12.project-simple
                             .projects-grid--wrap
                                 .projects-home__card__images__img(titulo='Worl Trade Center')
                                     img.img-fluid(src='img/images1.jpg' alt)
 
-                                .projects-home__card__images__img
-                                    img.img-fluid(src='img/images1.jpg' alt)
-
-                                .projects-home__card__images__img
-                                    img.img-fluid(src='img/images1.jpg' alt)
 
                             h3.projects-home__card__title 
                                 | Typology 
                                 .btnHoverGrid
 
-                            .projects-home__card__hover__projects
-                                h5.title-categoria PROJECTS
+                            a(href="project-detail.html")
+                                .projects-home__card__hover__projects
+                                    h5.title-categoria PROJECTS
 
-                                .projects-home__card__hover__projects__links
-                                    a(href="project-home.html")
+                                    .projects-home__card__hover__projects__links
                                         h5.projects-home__card__hover__title Worl Trade Center
 
-                                    a(href="project-home.html")
-                                        h5.projects-home__card__hover__title Transparencias
-
-                                    a(href="project-home.html") 
-                                        h5.projects-home__card__hover__title Agricultura
-
-                                h4 Typology 
-                                    .btnHoverGridInt
+                                    h4 Typology 
+                                        .btnHoverGridInt
 
 
     include includes/footer.pug
