--- a/src/scss/components/_card-project.scss
+++ b/src/scss/components/_card-project.scss
@@ -6,6 +6,7 @@
 
         h6:not(.project__title) {
             font-size: var(--h5);
+            font-family: var(--primaria-regular);
         }
 
         ul {
@@ -37,6 +38,7 @@
                 object-position: center;
                 width: 100%;
                 height: 100%;
+                border-radius: 6px;
             }
         }
 
@@ -53,14 +55,18 @@
             font-family: var(--secundaria-regular);
             margin: 1em 0;
 
-            &__title {
+            // &__title {
+            //     &::before {
+            //         content: "\2192";
+            //         margin-right: 0.3em;
+            //     }
+            // }
+            p {
+                font-size: var(--h5);
                 &::before {
                     content: "\2192";
                     margin-right: 0.3em;
                 }
-            }
-            p {
-                font-size: var(--h6);
             }
         }
     }
@@ -68,12 +74,16 @@
     &__name {
         margin-bottom: 0.3em;
         font-size: var(--ls);
+        overflow-wrap: break-word;
     }
 }
 
 .projects-home {
     .row {
         row-gap: 60px;
+        column-gap: 1.23rem;
+        // column-gap: 12px;
+        // justify-content: center;
     }
 
     &__card {
@@ -97,8 +107,8 @@
                 height: inherit;
                 width: 100%;
                 overflow: hidden;
-                margin: 0.2em 0;
-                border-radius: 5px;
+                margin: 0;
+                border-radius: 6px;
 
                 &:nth-child(1) {
                     img {
@@ -204,16 +214,17 @@
             position: absolute;
             top: 0;
             left: 0;
+            right: 0;
             transform: rotateZ(180deg) translateX(-120%);
-            // transform: rotateZ(180deg) translateX(0%);
             writing-mode: vertical-rl;
             background: rgba($color: #000, $alpha: 0.8);
-            width: calc(97.9% - calc(var(--bs-gutter-x) * 0.5));
+            // width: calc(97.9% - calc(var(--bs-gutter-x) * 0.5));
+            width: 100%;
             height: 100%;
             display: flex;
             flex-direction: column;
             justify-content: flex-end;
-            border-radius: 5px;
+            border-radius: 6px;
             overflow: hidden;
             opacity: 1;
             transition: 0.3s ease-in-out all;
@@ -259,16 +270,32 @@
         }
     }
 
-    .col-lg-4[categoria="Home"] {
+    .col-lg-4[categoria="Sin Categoria"] {
         display: none !important;
     }
 
-    .col-lg-4:not(.projects-home__acceso--projects) {
+    // .col-lg-4:not(.projects-home__acceso--projects) {
+    .col-lg-4 {
         transition: 0.4s ease-in-out all;
         position: relative;
         overflow: hidden;
         display: flex;
         cursor: pointer;
+        min-height: 600px;
+        padding: 0;
+        width: 32%;
+
+        .projects-grid--wrap {
+            gap: 0.3em 0;
+        }
+
+        // &.project-simple {
+        //     height: 300px;
+
+        //     .projects-home__card__hover__title::before {
+        //         display: none;
+        //     }
+        // }
 
         &:nth-child(2n) {
             align-items: flex-start;
@@ -337,7 +364,7 @@
                 .projects-home__card__hover__projects {
                     opacity: 1;
                     transform: rotateZ(180deg) translateX(0);
-                    left: calc(var(--bs-gutter-x) * 0.5);
+                    // left: calc(var(--bs-gutter-x) * 0.5);
                 }
             }
         }
@@ -346,12 +373,21 @@
     .btnHoverGrid {
         display: none;
     }
+
+    .linkCard {
+        position: absolute;
+        width: 65%;
+        height: 100%;
+        display: block;
+        z-index: 1;
+    }
 }
 
 @media (max-width: 768px) {
     .projects-home {
         .row {
             row-gap: 20px !important;
+            padding: 0 calc(var(--bs-gutter-x) * 0.5);
         }
 
         &__card {
@@ -368,10 +404,9 @@
                 &__projects {
                     flex-direction: column !important;
                     direction: ltr !important;
-                    width: 94%;
                     transform: rotateZ(180deg) translateX(-140%);
-                    right: 0;
-                    margin: auto;
+                    // margin: auto calc(var(--bs-gutter-x) * 0.5);
+                    width: 100%;
 
                     h4 {
                         display: flex;
@@ -389,6 +424,15 @@
                         align-items: flex-start;
                         row-gap: 10px;
                         margin: 0.5em 0 0 1em !important;
+                    }
+
+                    @media (hover: hover) {
+                        &:hover {
+                            .projects-home__card__hover__projects {
+                                opacity: 1;
+                                transform: rotateZ(180deg) translateX(0);
+                            }
+                        }
                     }
 
                     &.active {
@@ -452,14 +496,51 @@
             }
         }
 
-        .col-lg-4:not(.projects-home__acceso--projects) {
+        // .col-lg-4:not(.projects-home__acceso--projects) {
+        .col-lg-4 {
             flex-direction: row !important;
             align-items: flex-end !important;
+            min-height: auto;
+            width: 100%;
+            // padding: 0 calc(var(--bs-gutter-x) * 0.5);
+
+            &.project-simple {
+                height: auto;
+                .projects-grid--wrap {
+                    max-height: 300px;
+                    height: 200px;
+                }
+            }
+
+            @media (hover: hover) {
+                &:hover {
+                    .projects-home__card__hover__projects {
+                        opacity: 0;
+                        transform: rotateZ(180deg) translateX(-140%);
+
+                        &.active {
+                            opacity: 1 !important;
+                            transform: rotateZ(180deg) translateX(0px) !important;
+                        }
+                    }
+                }
+            }
+
+            &.active {
+                .linkCard {
+                    display: block;
+                }
+            }
         }
 
         .projects-grid--wrap {
             max-height: 220px;
-            gap: 3px;
+            gap: 3px !important;
+        }
+
+        .linkCard {
+            width: 65%;
+            display: none;
         }
     }
 }
