--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -19,6 +19,13 @@
                 }
             }
 
+            #link-home {
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                display: block;
+            }
+
             &--hover {
                 color: #fff;
                 position: absolute;
@@ -113,15 +120,27 @@
 
                 &:nth-child(1) {
                     border-radius: 0 10px 10px 10px;
+
+                    img {
+                        object-position: top;
+                    }
                 }
 
                 &:nth-child(2) {
                     border-radius: 10px;
                     margin: 2px 0;
+
+                    img {
+                        object-position: center;
+                    }
                 }
 
                 &:nth-child(3) {
                     border-radius: 10px 10px 10px 0;
+
+                    img {
+                        object-position: bottom;
+                    }
                 }
 
                 img {
@@ -162,30 +181,30 @@
                     }
                 }
 
-                &:nth-child(1) {
+                &#li-projects {
                     border-radius: 10px 0 10px 10px;
                     background: var(--rosa);
                 }
 
-                &:nth-child(2) {
+                &#li-about {
                     background: var(--azul-rey);
                     border-radius: 10px;
                     margin: 2px 0;
                 }
 
-                &:nth-child(3) {
+                &#li-writin {
                     border-radius: 10px 10px 0 10px;
-                    background: var(--verde-limon);
-                    color: var(--txt-prm);
-                    cursor: pointer;
-                }
-
-                &:nth-child(4) {
                     background: var(--verde);
                 }
 
-                &:nth-child(5) {
+                &#li-teach {
                     background: var(--naranja);
+                }
+
+                &#li-connect {
+                    background: var(--verde-limon);
+                    color: var(--txt-prm);
+                    cursor: pointer;
                 }
             }
         }
@@ -203,6 +222,7 @@
         &__acceso {
             // margin-bottom: 3em;
             min-height: 600px;
+            border-radius: 6px;
 
             h3 {
                 color: #fff;
@@ -267,7 +287,31 @@
     }
 }
 
+.coming {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    height: 100vh;
+
+    h1 {
+        font-family: var(--primaria-regular);
+        text-align: center;
+        font-size: var(--xl);
+    }
+
+    img {
+        max-width: 350px;
+    }
+}
+
 @media (max-width: 768px) {
+    .coming {
+        img {
+            max-width: 280px;
+        }
+    }
+
     .home {
         .hero {
             flex-direction: column;
@@ -289,6 +333,7 @@
                     place-items: center;
                     color: #fff;
                     font-size: xx-large;
+                    z-index: 1;
 
                     &::after {
                         content: "+";
@@ -300,6 +345,7 @@
 
                         &::after {
                             content: "-";
+                            align-self: flex-start;
                         }
                     }
                 }
