--- a/src/scss/pages/_project-detail.scss
+++ b/src/scss/pages/_project-detail.scss
@@ -18,7 +18,7 @@
             position: relative;
 
             & > div {
-                padding-left: 3em;
+                padding-left: 1.3em;
             }
 
             &--cat {
@@ -37,7 +37,7 @@
         &--image {
             picture {
                 height: calc(620px + 750 * ((100vw - 1280px) / 1920));
-                border-radius: 0 0 5px 5px;
+                border-radius: 0 0 6px 6px;
                 overflow: hidden;
             }
         }
@@ -70,6 +70,7 @@
                     img {
                         transform: scale(0);
                         opacity: 0;
+                        border-radius: 6px;
                         max-width: calc(
                             400px + 600 * ((100vw - 1280px) / 1920)
                         );
@@ -78,35 +79,41 @@
                         );
                     }
 
-                    &:nth-child(1) {
+                    &#image1,
+                    &#image7 {
                         left: 0;
                         top: 12em;
                     }
 
-                    &:nth-child(2) {
+                    &#image2,
+                    &#image8 {
                         left: 15%;
                         top: 5em;
                         z-index: 1;
                     }
 
-                    &:nth-child(3) {
+                    &#image3,
+                    &#image9 {
                         left: 20%;
                         top: 0;
                     }
 
-                    &:nth-child(4) {
+                    &#image4,
+                    &#image10 {
                         left: 40%;
                         top: 12em;
                         z-index: 2;
                     }
 
-                    &:nth-child(5) {
+                    &#image5,
+                    &#image11 {
                         right: 5%;
                         top: 3em;
                         z-index: 1;
                     }
 
-                    &:nth-child(6) {
+                    &#image6,
+                    &#image12 {
                         right: 0;
                         top: 15em;
                     }
@@ -117,7 +124,8 @@
                 right: -40px;
 
                 .swiper-pagination-bullet {
-                    background: var(--rosa-dark);
+                    // background: var(--rosa-dark);
+                    background: var(--gris);
                     width: calc(14px - 5 * ((100vw - 1920px) / 1280));
                     height: calc(14px - 5 * ((100vw - 1920px) / 1280));
                     margin: 1em 0;
@@ -147,6 +155,13 @@
     }
 
     .related {
+        // .project-simple {
+        //     min-height: 300px;
+
+        //     .projects-home__card__hover__title::before {
+        //         display: none;
+        //     }
+        // }
         .title-section {
             color: var(--gris);
             text-transform: uppercase;
@@ -193,6 +208,7 @@
         width: auto !important;
         height: 90vh !important;
         border: 0;
+        border-radius: 6px;
         max-width: 100% !important;
     }
 
@@ -204,6 +220,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+
         a {
             border: 1px solid var(--gris-claro);
             width: 50px;
@@ -219,9 +236,11 @@
 
     .lb-data .lb-close {
         background: url(../img/icon-close-white.png) no-repeat center / cover;
+        // background: url(../img/icon-close.svg) no-repeat center / cover;
         opacity: 1;
-        width: 40px;
-        height: 40px;
+        width: 50px;
+        height: 50px;
+        z-index: 999;
     }
 }
 
@@ -266,6 +285,8 @@
                 padding: 2em 30px 0;
                 order: 2;
                 display: flex;
+                flex-direction: column;
+                flex-wrap: wrap;
 
                 &--cat {
                     display: none;
@@ -273,10 +294,22 @@
 
                 > div {
                     padding: 0.5em;
+                    flex-basis: 50%;
+                    max-width: 50%;
                 }
 
                 ul {
                     display: none;
+                }
+            }
+
+            &__body {
+                padding: 0 0 0 2em !important;
+                margin: 0;
+                flex-basis: 50%;
+
+                &__title {
+                    font-size: var(--h6);
                 }
             }
 
@@ -308,6 +341,10 @@
 
         .related {
             padding-bottom: 5em;
+
+            .project-simple {
+                min-height: auto;
+            }
         }
     }
 }
