--- a/src/scss/pages/_writing-detail.scss
+++ b/src/scss/pages/_writing-detail.scss
@@ -123,6 +123,7 @@
         &--wrap-info {
             order: 2;
             padding-top: 2em;
+            padding-bottom: 2em;
         }
 
         &--paragraph {
