--- a/src/pug/project-home.pug
+++ b/src/pug/project-home.pug
@@ -32,14 +32,11 @@ block content
                                         li Sustainable
                                         li Builded
                                         li Enviromental
-                                    h6.project__date 2015
-                                    h6.project__country.
 
-                                        Romania
-
-                                    h6.project__location.
-
-                                        21 273, 92 sqm
+                                    h6.project__date 
+                                        p 2015
+                                    //- h6.project__country Romania
+                                    //- h6.project__location 21 273, 92 sqm
 
                                 .col-lg-7.col-8
                                     picture
@@ -49,10 +46,11 @@ block content
                     .col-lg-5.grid__description
                         h3
                             sup Sustainable
-                            | The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
+                            p The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
 
             .container-fluid#quotes-one
-                p.projects-home__quotes The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
+                p.projects-home__quotes 
+                    p The capacity to maintain or improve the state and availability of desirable materials or conditions over the long terms into environments.
 
             .container.grid--wrap#grid--wrap-one
                 a(href='project-detail.html')
@@ -104,7 +102,8 @@ block content
                                 img.img-fluid(src='img/images1.jpg' alt)
 
             .container-fluid#quotes-two
-                p.projects-home__quotes The long terms into environment. Improve the state and availability of desirable materials or conditions over.
+                p.projects-home__quotes 
+                    p The long terms into environment. Improve the state and availability of desirable materials or conditions over.
 
 
     include includes/footer.pug
