--- a/src/pug/writing.pug
+++ b/src/pug/writing.pug
@@ -19,10 +19,11 @@ block content
                         - ++n
                         .col-12.papers__item
                             a(href="writing-detail.html") 
-                                p 
+                                .resumen 
                                     sup ESSAY 
                                     span […] 
-                                    span.parrafo I do write sometimes with the peacufl purpose of settle down ideas that arrives into the wild while  I'm hands on handshakes for the distances and 
+                                    span.parrafo 
+                                        p I do write sometimes with the peacufl purpose of settle down ideas that arrives into the wild while  I'm hands on handshakes for the distances and 
                                     span […]
 
 
