--- a/src/pug/about.pug
+++ b/src/pug/about.pug
@@ -27,20 +27,21 @@ block content
 
                                 .col-lg-5.about--info
                                     h1
-                                        sup Matei Denes
-                                        | “We are not men and women, we are humans, we are nature, we are things, projects are things, they are nature, they are human, they are us.”
+                                        span
+                                            sup Matei Denes
+                                        p “We are not men and women, we are humans, we are nature, we are things, projects are things, they are nature, they are human, they are us.”
 
                         .swiper-slide
-                             .row
-                                 .offset-lg-1.col-lg-5.about--image 
-                                     picture 
-                                         source(srcset="img/about.webp", type="image/webp")
-                                         img.img-fluid(src="img/about.jpg", alt="")
+                            .row
+                                .offset-lg-1.col-lg-5.about--image 
+                                    picture 
+                                        source(srcset="img/about.webp", type="image/webp")
+                                        img.img-fluid(src="img/about.jpg", alt="")
 
-                                 .col-lg-5.about--info
-                                     h1
-                                         sup Matei Denes
-                                         | “We are not men and women, we are humans, we are nature, we are things, projects are things, they are nature, they are human, they are us.”
+                                .col-lg-5.about--info
+                                    h1
+                                        sup Matei Denes
+                                        | “We are not men and women, we are humans, we are nature, we are things, projects are things, they are nature, they are human, they are us.”
 
 
                     .swiper-pagination
