--- a/src/scss/components/_card-project.scss
+++ b/src/scss/components/_card-project.scss
@@ -7,6 +7,11 @@
         h6:not(.project__title) {
             font-size: var(--h5);
             font-family: var(--primaria-regular);
+
+            & > * {
+                font-size: var(--h5);
+                font-family: var(--primaria-regular);
+            }
         }
 
         ul {
