--- a/src/pug/project-detail.pug
+++ b/src/pug/project-detail.pug
@@ -85,9 +85,9 @@ block content
                         .swiper.slider-detail
                             .swiper-wrapper
                                 .swiper-slide
-                                    a#image4(href="img/layout5.jpg", data-lightbox="galeria-desktop")
+                                    a#image4(href="img/layout.jpg", data-lightbox="galeria-desktop")
                                         picture
-                                            img.img-fluid(src='img/layout5.jpg' alt)
+                                            img.img-fluid(src='img/layout.jpg' alt)
 
                                 .swiper-slide
                                     a#image2(href="img/layout2.jpg", data-lightbox="galeria-desktop")
