--- a/src/pug/includes/modal-connect.pug
+++ b/src/pug/includes/modal-connect.pug
@@ -50,5 +50,5 @@
                                     h6.error-input Required
 
 
-                                button.boton.big.sec(id="btn-connect", type="submit") SEND IT
+                                input.boton.big.sec(id="btn-connect", type="submit", value="SEND IT")
 
