--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -101,17 +101,17 @@ block content
                         - ++n
                         .col-lg-4.col-12
                             .projects-grid--wrap
-                                .projects-home__card__images__img(titulo='Worl Trade Center')
+                                .projects-home__card__images__img(categoria='1 Worl Trade Center')
                                     picture
                                         source(srcset='img/images1.jpg' alt)
                                         img.img-fluid(src='img/images1.jpg' alt)
 
-                                .projects-home__card__images__img
+                                .projects-home__card__images__img(categoria='2')
                                     picture
                                         source(srcset='img/images1.jpg' alt)
                                         img.img-fluid(src='img/images1.jpg' alt)
 
-                                .projects-home__card__images__img
+                                .projects-home__card__images__img(categoria='3')
                                     picture
                                         source(srcset='img/images1.jpg' alt)
                                         img.img-fluid(src='img/images1.jpg' alt)
