--- a/src/pug/projects.pug
+++ b/src/pug/projects.pug
@@ -39,13 +39,13 @@ block content
                         - ++n
                         .col-lg-4.col-12
                             .projects-grid--wrap
-                                .projects-home__card__images__img(titulo='Worl Trade Center')
+                                .projects-home__card__images__img(categoria='1 Worl Trade Center')
                                     img.img-fluid(src='img/images1.jpg' alt)
 
-                                .projects-home__card__images__img
+                                .projects-home__card__images__img(categoria='2')
                                     img.img-fluid(src='img/images1.jpg' alt)
 
-                                .projects-home__card__images__img
+                                .projects-home__card__images__img(categoria='3')
                                     img.img-fluid(src='img/images1.jpg' alt)
 
                             h3.projects-home__card__title 
@@ -67,8 +67,10 @@ block content
                                     a(href="project-home.html") 
                                         h5.projects-home__card__hover__title Agricultura
 
-                                h4 Typology 
-                                    
+                                h4
+                                    span Typology 
+                                    .btnHoverGridInt 
+
 
                 h2.break#break1 Sometimes I do write for the sake of argument, because I think it is an interesting topic and I want to see how the discussion can go, a sort of devil’s advocateand the text goes further here.
                 h2.break#break2 Sometimes I do write for the sake of argument, because I think it is an interesting topic and I want to see how the discussion can go, a sort of devil’s advocateand the text goes further here.
