--- a/src/scss/pages/_projects.scss
+++ b/src/scss/pages/_projects.scss
@@ -53,7 +53,8 @@
         display: flex;
         flex-direction: column;
         height: 100%;
-        max-height: 600px;
+        max-height: calc(600px + 250 * ((100vw - 1920px) / 1280));
+        // max-height: 600px;
     }
 
     .projects-home__card__title {
@@ -71,15 +72,15 @@
     }
 }
 
-main.search{
-    .project-simple{
+main.search {
+    .project-simple {
         display: none;
 
-        &.match{
+        &.match {
             display: flex;
         }
 
-        .tags{
+        .tags {
             display: none;
         }
     }
